# Voiced

./: .gitignore
Architecture and Worflow Docs/: DATABASE_ARCHITECTURE_IMPROVED.md  IA_ENGINE_MULTI_TENANT_ARCHITECTURE.md  PROJECT_ARCHITECTURE.md  VAPI_SYSTEM_FLOWS.md
docs/: appintment_logic.md  architecture_mermaid.md  mcp-dashboard.html  mcp-technical-dashboard.html  tablas_bd_citas_app.md  tablas_bd_citas_app_mermaid.md
voiced-booking-system/: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
voiced-booking-system/backend/: .env.example  API_IMPROVEMENTS_SUMMARY.md  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
voiced-booking-system/backend/apps/analytics/: admin.py  models.py  urls.py  views.py
voiced-booking-system/backend/apps/appointments/: models.py  serializers.py  urls.py  views.py
voiced-booking-system/backend/apps/businesses/: __init__.py  admin.py  apps.py  models.py  onboarding_models.py  onboarding_serializers.py  serializers.py  services.py  urls.py  views.py
voiced-booking-system/backend/apps/clients/: admin.py  models.py  signals.py  urls.py  views.py
voiced-booking-system/backend/apps/core/: api_config.py  authentication.py  cache.py  choices.py  constants.py  exceptions.py  factories.py  helpers.py  managers.py  middleware.py  mixins.py  pagination.py  permissions.py  serializers.py  status_actions.py  tests.py  throttling.py  urls.py  utils.py  validators.py  viewsets.py
voiced-booking-system/backend/apps/core/management/commands/: clean_database.py  create_sample_data.py  create_superuser_with_business.py
voiced-booking-system/backend/apps/notifications/: admin.py  models.py  serializers.py  urls.py  views.py
voiced-booking-system/backend/apps/payments/: admin.py  models.py  serializers.py  urls.py  views.py
voiced-booking-system/backend/apps/resources/: admin.py  models.py  urls.py
voiced-booking-system/backend/apps/services/: __init__.py  models.py  serializers.py  urls.py  views.py
voiced-booking-system/backend/apps/users/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
voiced-booking-system/backend/apps/vapi_integration/: __init__.py  admin.py  api_client.py  apps.py  cache_manager.py  domain_services.py  event_handlers.py  models.py  multi_tenant_services.py  optimizations.py  processors.py  security.py  serializers.py  services.py  tasks.py  tenant_serializers.py  tests_multi_tenant.py  urls.py  value_objects.py  views.py
voiced-booking-system/backend/apps/vapi_integration/management/commands/: setup_multi_tenant.py  vapi_management.py
voiced-booking-system/backend/core/: asgi.py  celery.py  urls.py  wsgi.py
voiced-booking-system/backend/core/settings/: base.py  development.py  production.py  testing.py
voiced-booking-system/backend/scripts/: start-dev.sh
voiced-booking-system/docs/: PROJECT_STRUCTURE.md
voiced-booking-system/frontend/: Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
voiced-booking-system/frontend/app/: layout.tsx  page.tsx
voiced-booking-system/nginx/: nginx.conf
voiced-booking-system/scripts/: build.sh  setup.sh  start-dev.sh
